# lilearn2

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  LICENSE  README.md  index.html
.github/workflows/: rust.yml
assets/: sw.js
docs/: index.html  lilearn.js  lilearn_bg.wasm  sw.js
src/: app.rs  chess.rs  lib.rs  main.rs
src/egui_widgets/: progress_bar.rs
