[package]
name = "lilearn"
default-run = "lilearn"
version = "0.1.0"
rust-version = "1.65"
edition = "2021"
authors = ["Arshia S"]

[[bin]]
name = "lilearn"
path = "src/main.rs"

[lib]
name = "lib"
crate-type = ["cdylib", "rlib"]

[dependencies]
rodio = { version = "0.16.0", default-features = false }
rand = { version = "0.8.5", default-features = true }
image = { version = "0.24.1", default-features = true }
eframe = { path = "./egui/crates/eframe" }

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
wasm-bindgen = "0.2.80"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3.4"
features = [
    'HtmlAudioElement'
]


[profile.release]
opt-level = 2 # fast and small wasm


[patch.crates-io]
