[package]
name = "lilearn2"
default-run = "lilearn"
version = "0.1.0"
rust-version = "1.65"
edition = "2021"
authors = ["Arshia S"]

[[bin]]
name = "lilearn"
path = "src/main.rs"

[lib]
name = "lib"
crate-type = ["cdylib", "rlib"]

[dependencies]
rodio = { version = "0.16.0", default-features = false, features = ["wav"] }
rand = { version = "0.8.5", default-features = true }
image = { version = "0.24.1", default-features = true }
itertools = { version = "0.10.5" }
serde = { version = "1.0.148" , features = ["derive"] }
rpds = { version = "0.12.0" }
eframe = { version = "0.20.1" , default-features = false, features = ["accesskit", "default_fonts","wgpu"] } 
egui = "0.20.1"
# web:

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3.4"
features = [
    'HtmlAudioElement'
]

